[gd_scene load_steps=15 format=3 uid="uid://beoqmtfflemsi"]

[ext_resource type="Script" path="res://Archive.gd" id="1_ie6oi"]
[ext_resource type="FontFile" uid="uid://bsa1fmba5nnkk" path="res://assets/F77MinecraftRegular-0VYv.ttf" id="2_3wyc7"]
[ext_resource type="Texture2D" uid="uid://b0sisuwum3gk8" path="res://textures/Checks/unchecked.png" id="3_5bf2k"]
[ext_resource type="Texture2D" uid="uid://dg8rmhkc3r2ow" path="res://textures/Checks/FindFile.png" id="4_gin21"]
[ext_resource type="Texture2D" uid="uid://blgqnrq35mxfn" path="res://textures/Checks/FindFileShine.png" id="5_50nw6"]
[ext_resource type="PackedScene" uid="uid://0bouryp2467i" path="res://NextPrevButtons.tscn" id="6_8u1wn"]

[sub_resource type="LabelSettings" id="LabelSettings_h0qg1"]
font = ExtResource("2_3wyc7")
font_size = 48
shadow_size = 16
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xl6vg"]
font = ExtResource("2_3wyc7")
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g6mth"]
font = ExtResource("2_3wyc7")
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_a4ltd"]
font = ExtResource("2_3wyc7")
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r3xr5"]
font = ExtResource("2_3wyc7")
font_size = 20
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p0i8t"]
font = ExtResource("2_3wyc7")
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pry5d"]
font = ExtResource("2_3wyc7")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_khqxv"]
font = ExtResource("2_3wyc7")
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="Archive" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ie6oi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MAP ARCHIVE"
label_settings = SubResource("LabelSettings_h0qg1")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "The primary map package : you NEED it !"
label_settings = SubResource("LabelSettings_xl6vg")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MarginContMinecraftFolder" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer"]
layout_mode = 2
text = "The archive is the file that contains the entirety of the Drehmal map. The installer is basically just a fancy extract software that also manages folders and installs mods. If you have not yet downloaded the archive, be ready for its size : the file can be extremely heavy !"
label_settings = SubResource("LabelSettings_g6mth")
autowrap_mode = 3

[node name="VBoxDownload" type="VBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxDownload"]
layout_mode = 2
size_flags_vertical = 6
text = "Step 1 : if you have not, download the map tar.gz archive !"
label_settings = SubResource("LabelSettings_a4ltd")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxDownload"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxDownload/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "You just need to download it ! Once it's downloaded, head on to Step 2 and then, the installer will take care of the rest."
label_settings = SubResource("LabelSettings_r3xr5")
autowrap_mode = 3

[node name="LinkButton" type="LinkButton" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxDownload/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.105882, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.403922, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_3wyc7")
theme_override_font_sizes/font_size = 24
text = "Link to the Archive"
underline = 1

[node name="VBoxFindThePath" type="VBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxFindThePath"]
layout_mode = 2
size_flags_vertical = 6
text = "Step 2 : locate the archive"
label_settings = SubResource("LabelSettings_a4ltd")

[node name="VBoxCont_MODS" type="VBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxFindThePath"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxFindThePath/VBoxCont_MODS"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxFindThePath/VBoxCont_MODS/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_5bf2k")
expand_mode = 3
stretch_mode = 5

[node name="TextureButtonMODS" type="TextureButton" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxFindThePath/VBoxCont_MODS/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_gin21")
texture_pressed = ExtResource("5_50nw6")
texture_hover = ExtResource("5_50nw6")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxFindThePath/VBoxCont_MODS/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.73

[node name="Label" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxFindThePath/VBoxCont_MODS/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Careful !"
label_settings = SubResource("LabelSettings_p0i8t")

[node name="Label2" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxFindThePath/VBoxCont_MODS/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "If you cannot find the downloaded archive, maybe you've placed it somewhere the installer does not have access to, in which case you'll need to move it somewhere else."
label_settings = SubResource("LabelSettings_pry5d")
autowrap_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxFindThePath/VBoxCont_MODS"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxFindThePath/VBoxCont_MODS/HBoxContainer2"]
layout_mode = 2
text = "Path:"
label_settings = SubResource("LabelSettings_khqxv")

[node name="TextEdit_MODS" type="TextEdit" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxFindThePath/VBoxCont_MODS/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "usually found inside your minecraft folder"

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxFindThePath/VBoxCont_MODS"]
title = "Open a File"
initial_position = 1
size = Vector2i(1133, 577)
always_on_top = true
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.tar.* ; Tar archive")

[node name="MarginContainer" parent="VBoxContainer" instance=ExtResource("6_8u1wn")]
layout_mode = 2
NextStepButton = true
PrevStepButton = true

[connection signal="file_selected" from="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxFindThePath/VBoxCont_MODS/FileDialog" to="." method="_on_file_dialog_return"]
